tests/specs/check/message_chain_formatting/message_chain_formatting.out
TS2769 [ERROR]: No overload matches this call.
  Overload 1 of 3, '(s: string, b: boolean): void', gave the following error.
    Argument of type 'number' is not assignable to parameter of type 'boolean'.
  Overload 2 of 3, '(ss: string[], b: boolean): void', gave the following error.
    Argument of type 'string' is not assignable to parameter of type 'string[]'.
  Overload 3 of 3, '(ss: string[], b: Date): void', gave the following error.
    Argument of type 'string' is not assignable to parameter of type 'string[]'.
foo("hello", 42);
~~~
    at [WILDLINE]/message_chain_formatting.ts:8:1

error: Type checking failed.
